[tool.poetry]
name = "wbm-snapshots-db"
version = "0.1.0"
description = ""
authors = ["Arseniy Shchepetnov <a.shchepetnov@gmail.com>"]
readme = "README.md"
packages = [{include = "wbm_snapshot"}]

[tool.poetry.dependencies]
python = "^3.7.2"
pymongo = "^3.12.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
mypy = "^0.991"
autopep8 = "^2.0.1"
pytest = ">=7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
